Switch from async Client to SyncClient
- Replace tabby::Client<Compat<TcpStream>> with tabby::SyncClient<TcpStream>
- Remove tokio, tokio-util, tokio-rustls, once_cell, futures-util deps
- Add sync feature to tabby dependency
- Delete runtime.rs (no more block_on wrapper needed)
- Set EncryptionLevel::NotSupported (SyncClient doesn't support TLS yet)
- All 336 cursor tests + 152 connection/type tests pass

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.23", features = ["extension-module"] }
-tabby = { git = "https://github.com/copycatdb/tabby.git", branch = "main", default-features = false, features = ["rustls", "chrono", "rust_decimal"] }
-tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
-tokio-util = { version = "0.7", features = ["compat"] }
-tokio-rustls = "0.26"
-rustls = "0.23"
-once_cell = "1"
+tabby = { git = "https://github.com/copycatdb/tabby.git", branch = "main", default-features = false, features = ["rustls", "chrono", "rust_decimal", "sync"] }
 rust_decimal = "1"
 chrono = "0.4"
 uuid = "1"
-futures-util = "0.3"
