--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,3 +58,71 @@ jobs:
         run: python -m pytest tests/ -v --timeout=30 --ignore=tests/test_000_dependencies.py --ignore=tests/test_007_logging.py
         env:
           DB_CONNECTION_STRING: "Server=localhost,1433;Database=master;UID=sa;PWD=TestPass123!;TrustServerCertificate=yes;"
+
+  benchmark:
+    name: Four-Way Benchmark
+    runs-on: ubuntu-latest
+    needs: build
+
+    services:
+      mssql:
+        image: mcr.microsoft.com/mssql/server:2022-latest
+        env:
+          ACCEPT_EULA: Y
+          MSSQL_SA_PASSWORD: TestPass123!
+        ports:
+          - 1433:1433
+        options: >-
+          --health-cmd "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P TestPass123! -C -Q 'SELECT 1'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: dtolnay/rust-toolchain@stable
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install maturin
+        run: pip install maturin
+
+      # ── Install whiskers (this repo) ──
+      - name: Build & install whiskers
+        run: maturin develop --release
+        env:
+          CONDA_PREFIX: /usr
+
+      # ── Install ODBC Driver 18 ──
+      - name: Install ODBC Driver 18
+        run: |
+          curl -fsSL https://packages.microsoft.com/keys/microsoft.asc | sudo gpg --dearmor -o /usr/share/keyrings/microsoft-prod.gpg
+          curl -fsSL https://packages.microsoft.com/config/ubuntu/$(lsb_release -rs)/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
+          sudo apt-get update
+          sudo ACCEPT_EULA=Y apt-get install -y msodbcsql18 unixodbc-dev
+
+      # ── Install pyodbc + mssql-python ──
+      - name: Install pyodbc & mssql-python
+        run: pip install pyodbc mssql-python
+
+      # ── Build & install furball ODBC driver ──
+      - name: Build furball
+        run: |
+          git clone https://github.com/copycatdb/furball.git /tmp/furball
+          cd /tmp/furball
+          cargo build --release
+
+      - name: Register furball ODBC driver
+        run: |
+          echo "[Furball]"                                            | sudo tee    /etc/odbcinst.ini
+          echo "Description=CopyCat Furball ODBC Driver"              | sudo tee -a /etc/odbcinst.ini
+          echo "Driver=/tmp/furball/target/release/libfurball.so"     | sudo tee -a /etc/odbcinst.ini
+
+      # ── Run benchmark ──
+      - name: Run four-way benchmark
+        run: python -u benchmarks/bench_four_way.py
+        env:
+          DB_CONNECTION_STRING: "Server=localhost;UID=SA;PWD=TestPass123!;TrustServerCertificate=yes"
