--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
   benchmark:
     name: Four-Way Benchmark
     runs-on: ubuntu-latest
-    needs: build
+    if: always()
 
     services:
       mssql:
