--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install maturin & pytest
-        run: pip install maturin pytest pytest-timeout
+        run: pip install maturin pytest pytest-timeout pytest-forked
 
       - name: Format
         run: cargo fmt --all -- --check
@@ -55,7 +55,7 @@ jobs:
           CONDA_PREFIX: /usr
 
       - name: Test
-        run: python -m pytest tests/ -v --timeout=30 --ignore=tests/test_000_dependencies.py --ignore=tests/test_007_logging.py
+        run: python -m pytest tests/ -v --timeout=30 --forked --ignore=tests/test_000_dependencies.py --ignore=tests/test_007_logging.py
         env:
           DB_CONNECTION_STRING: "Server=localhost,1433;Database=master;UID=sa;PWD=TestPass123!;TrustServerCertificate=yes;"
 
