--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,8 +99,9 @@ jobs:
       # ── Install ODBC Driver 18 ──
       - name: Install ODBC Driver 18
         run: |
-          curl -fsSL https://packages.microsoft.com/keys/microsoft.asc | sudo gpg --dearmor -o /usr/share/keyrings/microsoft-prod.gpg
-          curl -fsSL https://packages.microsoft.com/config/ubuntu/$(lsb_release -rs)/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
+          curl -fsSL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor -o /tmp/microsoft-prod.gpg
+          sudo install -o root -g root -m 644 /tmp/microsoft-prod.gpg /usr/share/keyrings/microsoft-prod.gpg
+          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft-prod.gpg] https://packages.microsoft.com/ubuntu/$(lsb_release -rs)/prod $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/mssql-release.list
           sudo apt-get update
           sudo ACCEPT_EULA=Y apt-get install -y msodbcsql18 unixodbc-dev
 
@@ -117,7 +118,7 @@ jobs:
 
       - name: Register furball ODBC driver
         run: |
-          echo "[Furball]"                                            | sudo tee    /etc/odbcinst.ini
+          echo "[Furball]"                                            | sudo tee -a /etc/odbcinst.ini
           echo "Description=CopyCat Furball ODBC Driver"              | sudo tee -a /etc/odbcinst.ini
           echo "Driver=/tmp/furball/target/release/libfurball.so"     | sudo tee -a /etc/odbcinst.ini
 
